# robius-location

./: .gitignore  Cargo.toml  README.md  build.rs  rustc-ice-2024-04-30T10_54_33-3910.txt  rustc-ice-2024-04-30T10_54_52-4012.txt  temp.error
examples/: hello_world.rs
src/: error.rs  lib.rs  sys.rs
src/sys/: android.rs  apple.rs  linux.rs  unsupported.rs  windows.rs
src/sys/android/: LocationCallback.java  callback.rs  mod.rs
src/sys/apple/: delegate.rs  mod.rs
